# llm-zoomcamp-code

./: .gitignore  ingest.py  pyproject.toml
05-monitoring/: app.py  assistant.py  db_init.py  db_save.py  metrics.py
homework/: dlt-workshop.md  hw-01-rag-agents_v1.ipynb  hw-02-slater-2026-06-29.md  hw-03-orchestration_v1.md  hw-04-evaluation_v1.md  hw-05-monitoring_v1.md
